- invalidating scale caches on locale changes